// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cycle_a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @flow
 */

import type {S} from './cycle_b.js';

export type N = any;

const xs: Array<S> = ['a', 'b', 'c'];

module.exports = xs;

=====================================output=====================================
/**
 * @flow
 */

import type { S } from "./cycle_b.js";

export type N = any;

const xs: Array<S> = ["a", "b", "c"];

module.exports = xs;

================================================================================
`;

exports[`cycle_b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @flow strict
 */

import type {N} from './cycle_a.js'; // Error

export type S = string;

const xs: Array<N> = [1, 2, 3];

module.exports = xs;

=====================================output=====================================
/**
 * @flow strict
 */

import type { N } from "./cycle_a.js"; // Error

export type S = string;

const xs: Array<N> = [1, 2, 3];

module.exports = xs;

================================================================================
`;

exports[`imports.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow strict */

// Named imports from non-strict file
import {FooObj} from './nonstrict_exports.js'; // Error
import * as All from './nonstrict_exports.js'; // Error

// Default imports from non-strict file
import BarObj from './nonstrict_exports.js'; // Error

// CJS imports from non-strict file
const BarObj2 = require("./nonstrict_exports"); // Error

// Imports from strict file
import {A} from './strict_exports.js'; // Not an error
import ADefault from './strict_exports.js'; // Not an error

// Imports from strict-local file
import type {V} from './strict_local_exports.js'; // Error

// Import from library
import StrictLib from './strict_lib.js'; // Not an error

import NonstrictLib from './nonstrict_lib.js'; // Error

const CommonJSModule = require('CommonJSModule'); // Not an error
import ESModule from 'ESModule'; // Not an error

// Import type
import type {N} from './strict_exports.js'; // Not an error
import type {S} from './nonstrict_exports.js'; // Error

// Import typeof
import typeof {A as AType} from './strict_exports.js'; // Not an error
import typeof {FooObj as FooObjType} from './nonstrict_exports.js'; // Error

// Suppressed imports
// flowlint nonstrict-import:off
import {BazObj} from './nonstrict_exports.js'; // Error; Suppressed
import BangObj from './nonstrict_exports.js'; // Error; Suppressed
import * as All2 from './nonstrict_exports.js'; // Error; Suppressed
const BarObj3 = require("./nonstrict_exports"); // Error; Suppressed

=====================================output=====================================
/* @flow strict */

// Named imports from non-strict file
import { FooObj } from "./nonstrict_exports.js"; // Error
import * as All from "./nonstrict_exports.js"; // Error

// Default imports from non-strict file
import BarObj from "./nonstrict_exports.js"; // Error

// CJS imports from non-strict file
const BarObj2 = require("./nonstrict_exports"); // Error

// Imports from strict file
import { A } from "./strict_exports.js"; // Not an error
import ADefault from "./strict_exports.js"; // Not an error

// Imports from strict-local file
import type { V } from "./strict_local_exports.js"; // Error

// Import from library
import StrictLib from "./strict_lib.js"; // Not an error

import NonstrictLib from "./nonstrict_lib.js"; // Error

const CommonJSModule = require("CommonJSModule"); // Not an error
import ESModule from "ESModule"; // Not an error

// Import type
import type { N } from "./strict_exports.js"; // Not an error
import type { S } from "./nonstrict_exports.js"; // Error

// Import typeof
import typeof { A as AType } from "./strict_exports.js"; // Not an error
import typeof { FooObj as FooObjType } from "./nonstrict_exports.js"; // Error

// Suppressed imports
// flowlint nonstrict-import:off
import { BazObj } from "./nonstrict_exports.js"; // Error; Suppressed
import BangObj from "./nonstrict_exports.js"; // Error; Suppressed
import * as All2 from "./nonstrict_exports.js"; // Error; Suppressed
const BarObj3 = require("./nonstrict_exports"); // Error; Suppressed

================================================================================
`;

exports[`nonstrict_exports.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */

type FooType = {foo: string};
const FooObj: FooType = {foo: "fooStr"};

type BarType = {bar: number};
const BarObj: BarType = {bar: 0};

type BazType = {baz: boolean};
const BazObj: BazType = {baz: true};

export type S = string;

export {FooObj};
export {BazObj};

export default BarObj;

=====================================output=====================================
/* @flow */

type FooType = { foo: string };
const FooObj: FooType = { foo: "fooStr" };

type BarType = { bar: number };
const BarObj: BarType = { bar: 0 };

type BazType = { baz: boolean };
const BazObj: BazType = { baz: true };

export type S = string;

export { FooObj };
export { BazObj };

export default BarObj;

================================================================================
`;

exports[`strict_exports.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow strict */

const A: number = 7;

export type N = number;

export {A};
export default A;

=====================================output=====================================
/* @flow strict */

const A: number = 7;

export type N = number;

export { A };
export default A;

================================================================================
`;

exports[`strict_local_exports.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow strict-local

export type V = number;

=====================================output=====================================
// @flow strict-local

export type V = number;

================================================================================
`;
